fix: add text-align: justify to p in .intro

--- a/scss/components/_components.article.scss
+++ b/scss/components/_components.article.scss
@@ -8,6 +8,7 @@
         }
     }
     p {
+        text-align: justify;
         @include font(16px, Doris, normal, 0);
     }
 }
